Before changes to supermenu

--- a/app/assets/images/.gitignore
+++ b/app/assets/images/.gitignore
@@ -4,6 +4,19 @@ images/*
 images/sib/*
 images/public
 images/public/*
+images/public/Greenhouse_Slideshow/Archive.zip
+images/public/ib_honors/honors_lab.zip
+sib/*
+!sib
+sib/*
+!public
+public/*
+public/Greenhouse_Slideshow/Archive.zip
+public/ib_honors/honors_lab.zip
+
+
+
+
 logs/*
 tmp/*
 !.gitignore
