--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /app/assets/images/sib/*
 /app/assets/images/public
 /app/assets/images/public/*
+/app/assets/images/public/Greenhouse_Slideshow/Archive.zip
+/app/assets/images/public/ib_honors/honors_lab.zip
