Before changes to supermenu

--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,10 @@
 /log/*
 !/log/.keep
 /tmp
-/app/assets/images/*
-/app/assets/images/sib
-/app/assets/images/sib/*
-/app/assets/images/public
-/app/assets/images/public/*
-/app/assets/images/public/Greenhouse_Slideshow/Archive.zip
-/app/assets/images/public/ib_honors/honors_lab.zip
+!app/assets/images/*
+!app/assets/images/sib
+app/assets/images/sib/*
+!app/assets/images/public
+app/assets/images/public/*
+app/assets/images/public/Greenhouse_Slideshow/Archive.zip
+app/assets/images/public/ib_honors/honors_lab.zip
